# SKAd_updater

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  generate_brew_formula.sh
cmake/: Dependencies.cmake
docs/: skad_updater.1
homebrew/: completions.bash  skad_updater.tpl.rb
src/: CMakeLists.txt  ManagerApi.cpp  ManagerApi.h  Plist.cpp  Plist.h  PodFile.cpp  PodFile.h  cli.cpp  cli.h  common.h  exit_message.h  main.cpp
tests/: CMakeLists.txt  end2end.cpp
tests/resources/: Info.plist  NoNetworksPodfile  PartialPodfile  Podfile  empty.Info.plist  full.Info.plist  nosk.Info.plist  simple.Info.plist
tests/servermock/: run_mock_server.sh  server_mock.py
